feat: import group templates with auto discovery
